--- a/app/views/paths/popups/_launchpad.html.haml
+++ b/app/views/paths/popups/_launchpad.html.haml
@@ -1,4 +1,4 @@
-%div#launchpad.modal.hide.fade{ style: "left: 38%; top: 30%;"}
+%div#launchpad.modal.hide.fade{ style: "left: 37.3%; top: 30%;"}
   %div.overlay
     %div.launchpad
       %button.modal_close &times;
@@ -30,7 +30,7 @@
 
 :javascript
   $(function(){
-    $(".userctrlpanel").click(function(){
+    $(".button-actionable").click(function(){
       $('#launchpad').modal({
         keyboard: true,
         backdrop: 'static',
