--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,6 +1,6 @@
-%li{ style: "margin-bottom: 1px;" }
-  %div{ style: "display:inline-block;" }
+%li
+  %div{ style: "float:left;" }
     = link_to (image_tag comment.user.profile_pic, class: "commentphoto"), comment.user
-  %div{ style: "display:inline-block; margin: 0 0 0 6px;" }
+  %div{ style: "overflow:hidden; margin: 0 0 0 43px;" }
     %p{ style: "font-size: 13px; color: black; margin-left: 0;" }= comment.content
     %p{ style: "margin-left: 0;" } #{link_to comment.user.name, comment.user} about #{time_ago_in_words(comment.created_at)} ago
