--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -21,3 +21,4 @@
       - flash.each do |key, value|
         = content_tag(:div, value, :class => "alert-message #{key}")
       = yield
+    = render "layouts/footer"
