--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -81,7 +81,7 @@
 .span11{ display: inline-block; vertical-align: top;} 
 .row .span5{margin-left:20px;}
 .row .span11{margin-left:12px;}
-.container.body { width: 940px; padding: 15px; background-color: rgba(255, 255, 255, .3); border:none; box-shadow:none; }
+.container.body { margin-bottom:11px; border-radius:6px; width: 940px; padding: 15px; background-color: rgba(255, 255, 255, .3); border:none; box-shadow:none; }
 #content { padding-top: 42px; min-height: 450px;}
 
 /* From profile */
@@ -205,3 +205,9 @@ nav img{width:150px}
 .button-actionable { text-shadow: 0 1px 0px black; color: white; background-image:-webkit-linear-gradient(top, #ee5f5b, #c43c35); }
 .button:hover { box-shadow: 0px 0px 1px black }
 h1, h2, h3, h4, h5, h6, p, div, span, a { font-family: 'MuliRegular' }
+
+/* Footer */
+.footer{height:20px; margin-bottom: 6px; text-align:center; color:#8D8D8D}
+.copyright{}
+.footerlinks{}
+.footerlinks a{text-decoration: none; color:#707070}
