--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -46,9 +46,7 @@
           $(this).replaceWith(data).fadeIn();
         });
       });
-    });
-  :css
-    .body.container { border: 0px; background-color: transparent; box-shadow: none; margin-top: -40px; }  
+    });  
   %div.quizspace
     %div.quizheader
       = image_tag @section.path.path_pic, size: "40x40"
@@ -73,12 +71,12 @@
               %li.answer_content{ id: "answer_#{a.id}" }
                 = radio_button_tag :answer, a.id, false, style: "display: none;"
                 %span= a.content
-        = link_to "Next", continue_section_path(@section.id), id: "nextbutton", style: "display: none; float: right;", remote: true, class: "btn danger", method: "post" 
+        = link_to "Next", continue_section_path(@section.id), id: "nextbutton", style: "display: none; float: right;", remote: true, class: "button button-actionable", method: "post" 
     %div{ style: "display:inline-block; vertical-align:top;" }
       %div.pointsandstreakspace
         %div.pointspace.counterbox
           %span.counter
-            - earned_points_digits = @earned_points.to_s.split("").reverse.push("0").push("0").push("0").reverse.slice(-4, 4)
+            - earned_points_digits = @enrollment.total_points.to_s.split("").reverse.push("0").push("0").push("0").reverse.slice(-4, 4)
             - earned_points_digits.each do |d|
               %span.digit
                 %span{ title: "#{d}" }= d
