--- a/app/assets/stylesheets/launchpad.css
+++ b/app/assets/stylesheets/launchpad.css
@@ -20,19 +20,10 @@
 }
 .launchpad h1{ font: bold 23px 'Muli', sans-serif; margin:0px; width:868px; padding:0px; }
 .launchpad h1>img{ border-radius:4px; height:36px; width:36px; }
-.launchpad h1>span{ position:relative; bottom:8px; }
+.launchpad h1>div{ position:relative; bottom:8px; display:inline;}
 .launchpadcontent{ margin-left:10px; margin-top:10px; border-collapse:collapse; }
 .launchpadpoints{ font-weight:bold; font-size:11px; font-style:italic; white-space:nowrap; margin-right: 5px; }
-.launchpadsectioncolumn{
-    display: inline-block;
-    border: 1px solid rgba(0, 0, 0, .1);
-    border-radius: 6px;
-    padding: 10px;
-    width: 160px;
-    vertical-align: top;
-    overflow: auto;
-    height: 330px;
-}
+.launchpadsectioncolumn{ display: inline-block; border: 1px solid rgba(0, 0, 0, .1); border-radius: 6px; padding: 10px;width: 160px;vertical-align: top; overflow: auto; height: 330px;}
 .launchpadCRcolumn{ width: 100%; display:inline-block; vertical-align: top; overflow:auto; }
 .launchpadCRcolumn table { width: 100%; }
 .launchpadCRcolumn td.question_status { text-align: right; }
