--- a/app/views/sections/_finish.html.haml
+++ b/app/views/sections/_finish.html.haml
@@ -29,4 +29,4 @@
       %a <img class="socialicon" src="https://s3.amazonaws.com/moonlite-nsdub/static/icon+twitter+small.png"></a>
       %a <img class="socialicon" src="https://s3.amazonaws.com/moonlite-nsdub/static/icon+Google%2B+small.png"></a>
       %a <img class="socialicon" src="https://s3.amazonaws.com/moonlite-nsdub/static/icon+Pinterest+small.png"></a>
-    = link_to "Continue", community_path_url(@section.path, completed: "true"), class: "btn info", style: "float: right;"
+    = link_to "Continue", community_path_url(@section.path, completed: "true"), class: "button button-info", style: "float: right;"
