--- a/app/views/comments/_comments.html.haml
+++ b/app/views/comments/_comments.html.haml
@@ -16,7 +16,7 @@
         %p.no_comments There are no comments for this yet.
     = form_for(current_user.comments.new, remote: true) do |f|
       %div{ style: "width: 100%" }
-        = f.text_area :content, :rows => 2, :style => "width:300px;"
+        = f.text_area :content, :rows => 2, :style => "width: 510px; height: 55px; "
       = hidden_field :comment, :owner_type, { :value => owner_type }
       = hidden_field :comment, :owner_id, { :value => owner_id }
-      = f.submit "Add Comment", :class => "btn secondary small", :style => "margin-top:15px;"
+      = f.submit "Add Comment", :class => "button button-standard button-small", :style => "margin-top:15px;"
