--- a/app/views/sections/_continue.html.haml
+++ b/app/views/sections/_continue.html.haml
@@ -3,10 +3,11 @@
     var continue_countdown = true;
     var count_down_bar_width = 100;
     function count_down_points(){
-      points = parseInt($count_down_points.text());
+      var points = $count_down_points.text().replace(" points", "");
+      points = parseInt(points);
       if(points > 0){
         points = points - 1;
-        $count_down_points.text(points);
+        $count_down_points.text(points + " points");
         $("#points_remaining").val(points);
         if(continue_countdown == true){
           setTimeout(count_down_points, 300);
@@ -60,7 +61,7 @@
         %span= @task.question
       %div.questionfooter
         %div.pointbar
-          %span{ style: "position: absolute;" } 100
+          %span{ style: "position: absolute;" } 100 points
           %div.pointbarfiller{ style: "display: inline-block;"}
       %div.responsespace
         = form_tag(complete_section_path(@section.id), :remote => true, :method => "put", :id => "challenge_form") do
