--- a/app/assets/stylesheets/revolution.css
+++ b/app/assets/stylesheets/revolution.css
@@ -48,7 +48,7 @@
 #topsection{margin: 0; border: 1px solid rgba(0, 0, 0, .1);border-radius: 6px;position:relative;background-clip: padding-box; color:#333; background-color:white; margin-bottom:10px;}
 #updatespace{ background-color: white; border-radius: 6px; padding: 12px 0 9px 13px; overflow: hidden;}
 .bigheaderimage{ height:160px; width:160px; box-shadow: rgba(0, 0, 0, 0.25) 0px 2px 5px; margin-right: 12px; border-radius:4px;}
-.rightofbigheaderimage{ display:inline-block; }
+.rightofbigheaderimage{ display:inline-block; width: 729px; }
 
 #topboxcontent h1 { margin:0px; line-height:28px; }
 #topboxcontent h3 { margin-bottom:9px; font-style:italic; color:#666666; }
@@ -57,7 +57,7 @@
 .userctrlpanel p { margin:31px 0 0 0; color:#404040; font-weight: bold; font-size:12px; }
 .userctrlpanel span { font-size:11px; color:#404040; }
 .challengecarousel{ display:inline-block; height: 78px; overflow: hidden; }
-.inlinedisplay { list-style-type: none; position:relative; margin: 0; bottom:6px;}
+.inlinedisplay { list-style-type: none; position:relative; margin: 0; bottom:6px; overflow-x: hidden; }
 .inlinedisplay li { display:inline; }
 .bar2 .mosaic-overlay { bottom:-20px; height:40px; background-color: rgba(0, 0, 0, .8); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)"; filter:alpha(opacity=80); }
 .bar2 .mosaic-overlay:hover { background-color: rgba(0,0,0,1); -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)"; filter:alpha(opacity=100); text-decoration: none; }
