--- a/app/views/personas/_preview.html.haml
+++ b/app/views/personas/_preview.html.haml
@@ -16,4 +16,4 @@
       %h2= persona.name
       %p= persona.description
     = link_to persona_path(persona), class: "show_persona_select", remote: true do
-      %button.btn.danger{ style: "float: right;" } Choose
+      %button.button.button-actionable{ style: "float: right;" } Choose
