--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -47,5 +47,5 @@
       %div.input
         = f.password_field :password_confirmation
     %div.actions
-      = f.submit "Save", :class => "btn primary"
-      = link_to "Cancel", current_user, :class => "btn secondary"
+      = f.submit "Save", :class => "button button-info"
+      = link_to "Cancel", current_user, :class => "button button-standard"
