--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -45,4 +45,4 @@
         %div 
           = image_tag path.path_pic, class: "mosaic-backdrop", style: "display:inline;", size: "140x140"
   %div.explorenewuserfooter
-    = link_to "Back", explore_path, class: "btn back_to_preview_index", remote: true
+    = link_to "Back", explore_path, class: "button button-standard back_to_preview_index", remote: true
