--- a/app/views/paths/popups/_launchpad.html.haml
+++ b/app/views/paths/popups/_launchpad.html.haml
@@ -1,7 +1,8 @@
 %div#launchpad.modal.hide.fade{ style: "left: 37.3%; top: 30%;"}
   %div.overlay
     %div.launchpad
-      %button.modal_close &times;
+      %div.modal_close
+        %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
       %h1
         = image_tag(@path.path_pic)
         %span #{@path.name} - #{@total_points_earned} pts, Level #{current_user.level(@path)}
