--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -10,7 +10,8 @@
       close_button();
     });
   %div.exploreheader
-    %button.modal_close{ style: "margin: 5px 20px 0 0;" } &times;
+    %div.modal_close
+      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
     %h1{ style: "font-size: 23px; margin-bottom: 8px;" }
       %strong Explore: Pick a challenge...
     %div
