--- a/app/views/layouts/landing.html.haml
+++ b/app/views/layouts/landing.html.haml
@@ -4,6 +4,7 @@
   :css
     body { background-image: url('https://s3.amazonaws.com/moonlite-nsdub/static/easterislandsketch70pct.jpg'); background-repeat:no-repeat; background-attachment:fixed;background-size:100% 100%;font-family: 'Muli', sans-serif;}
     #landingbox { height:323px; width:695px; margin-left:auto; margin-right:auto; margin-top:140px; }
+    .explorenewusercontent{ box-shadow: none; }
 %body
   = render "layouts/navbar"
   %div#landingbox
