--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -12,11 +12,11 @@
   %div.exploreheader
     %div.modal_close
       %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
-    %h1{ style: "font-size: 23px; margin-bottom: 8px;" }
-      %strong Explore: Pick a challenge...
+    %h1{ style: "font-size: 23px; margin-bottom: 3px;" }
+      %strong Explore: Adopt a Persona...
     %div
-      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px" }
-      %p{ style: "font-size: 15px; line-height: 28px; display:inline; "} Personas organize all the MetaBright Challenges. You can always enroll in multiple paths. 
+      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; position:relative; top:1px;" }
+      %p{ style: "font-size: 14px; line-height: 28px; display:inline; "} Your Persona should represent you and your interests. You can always enroll in multiple Personas. 
   %hr{ style: "margin:0px;" }
   %div.exploretiles
     - @personas.each do |persona|
