--- a/app/views/sections/_intro.html.haml
+++ b/app/views/sections/_intro.html.haml
@@ -10,6 +10,7 @@
   %div.firstchallengeint
     %div.firstchallengeintheader
       %span You're about to start your first Challenge!
+    %hr{ style:"margin:0"}
     %div.firstchallengeintcontent
       %ul
         %li
