--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -2,6 +2,7 @@
   %div.firstchallengeint
     %div.firstchallengeintheader
       %span You're about to start your first Challenge!
+    %hr{ style:"margin:0" }
     %div.firstchallengeintcontent
       %ul
         %li
