--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -22,3 +22,6 @@
             %li.navitem
               = link_to create_path do
                 = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/create.png", style: "width:22px;"
+        %ul.nav.pull-right{ style: "float:right; margin-right: 75px;" }
+          %li
+            = link_to "Sign out", signout_path
