--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -35,7 +35,7 @@
   %div.exploretiles
     - @paths.each do |path|
       %div.mosaic-block.bar2
-        = link_to (current_user.enrolled?(path) ? path_url(path) : continue_path_url(path)), class: "mosaic-overlay" do
+        = link_to path_url(path), class: "mosaic-overlay" do
           %div.details
             %h4 #{truncate(path.name,length: 17, separator: ' ')}
             - if current_user.enrolled?(path)
