style bug fixes

--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -16,7 +16,7 @@
     .exploreheader{ margin:0px; width:669px;padding:12px 0 0px 12px; background-color:#F9F9F9;}
     .exploreheader h1 {font-size: 21px; margin-bottom: 10px;}
     .exploreheader img {width:40px; height: 40px; border-radius:4px; float:left; margin-right: 8px;}
-    .exploretiles {padding:12px;}
+    .exploretiles {padding:16px;}
     .exploretiledetailsarea{border-radius:10px; padding:10px 10px 0 10px;}
     .exploretiles .bigexploreimagespace{display:inline-block; vertical-align: top;}
     .exploretiles .bigexploreimagespace img{width:120px; margin-right:10px}
@@ -26,12 +26,12 @@
     .details button{ padding:3px; float:right; position:relative; right:6px; font-size:10px; font-weight:bold; opacity:1;}
     .exploretiles .bar2 .mosaic-overlay { bottom:-28px; height:48px;}
     .exploretiles .mosaic-block {width:130px; height:130px;}
-    .explorenewuserfooter{position:relative; bottom:12px; left:12px;}
+    .explorenewuserfooter{position:relative; bottom:12px; left:16px; margin-bottom:8px;}
     
   %div.exploreheader
     %div{ style: "padding-bottom:8px;" }
       = image_tag @persona.picture
-      %h1{ style: "font-size: 23px; position:relative; top:8px;" }
+      %h1{ style: "font-size: 23px; position:relative; top:8px; line-height:1;" }
         %strong Explore: Choose your Challenge...
     %div
       %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; height:15px; margin:4px 4px 0 0;" }
