--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -27,8 +27,11 @@
     .exploretiles .bar2 .mosaic-overlay { bottom:-28px; height:48px;}
     .exploretiles .mosaic-block {width:130px; height:130px;}
     .explorenewuserfooter{position:relative; bottom:12px; left:16px; margin-bottom:8px;}
+    .modal_close img{width:20px; height:20px;}
     
   %div.exploreheader
+    %div.modal_close{ style: "margin-right:1px;" }
+      %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
     %div{ style: "padding-bottom:8px;" }
       = image_tag @persona.picture
       %h1{ style: "font-size: 23px; position:relative; top:8px; line-height:1;" }
