--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,4 +1,4 @@
-%div.span16{ style: "background-color: white; border-radius: 4px; padding:8px;" }
+%div{ style: "background-color: white; border-radius: 4px; padding:8px; width: 923px;" }
   %h1{ style: "border-bottom: 1px solid whitesmoke;" } Edit Profile
   = form_for(@user) do |f|
     = render 'shared/error_messages', :object => f.object
