--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -9,31 +9,21 @@
       %ul
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_1_purple.png" }
-          %span.inttitle Enroll in Challenges
+          %span.inttitle Choose a Persona
           %br
           %span.intdetails
-            Topics in MetaBright are called Challenges. Each Challenge is broken down into
-            %strong multiple sections
-            with varying subject matter and difficulty.
+            The world of Metabright is made up of Personas. Personas represent who you are or who you want to be. Some are serious, some are for education, and some are just for fun. New personas are will be unlocked every week.
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_2_purple.png" }
           %span.inttitle Prove yourself
           %br
           %span.intdetails 
-            Demonstrate your progress or mastery in Challenges by 
-            %strong earning points
-            and 
-            = succeed "." do
-              %strong moving up levels
-            Collect points by completing quiz-type questions and social
-            = succeed "." do
-              %strong Challenge Questions
+            Personas are made up of challenges, skills and adventures. As you progress through each, you will also improve your persona. Sometimes the way to progress will be a quiz, or a test of your creative skills - sometimes it will be a call to a larger adventure.
         %li
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Random+numbers/round_3_purple.png" }
           %span.inttitle Grow!
           %br
           %span.intdetails 
-            Check out the 
-            %strong leaderboard
-            and see who the experts are in your Challenge. Learn what they know by studying their responses to Challenge Questions.
+            There is no end to the world of Metabright. Aquire new personas, help (or challenge) others, and even build your own personas and challenges for others to take.
+          %p Good luck.
     = link_to "Let's go!", start_path, style: "float: right; margin: 0 10px 10px 0;", class: "button button-actionable"
