--- a/app/views/personas/_explore.html.haml
+++ b/app/views/personas/_explore.html.haml
@@ -13,7 +13,10 @@
     %div.modal_close
       %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/close_icon.png"}
     %h1{ style: "font-size: 23px; margin-bottom: 3px;" }
-      %strong Explore: Adopt a Persona...
+      - if current_user.personas.empty?
+        Explore: Adopt your first Persona...
+      - else
+        Explore: Choose a persona...
     %div
       %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; position:relative; top:1px;" }
       %p{ style: "font-size: 14px; line-height: 28px; display:inline; "} Your Persona should represent you and your interests. You can always enroll in multiple Personas. 
