--- a/app/views/layouts/_explore_modal.html.haml
+++ b/app/views/layouts/_explore_modal.html.haml
@@ -1,6 +1,5 @@
 :css
   explorenewusercontent: { height: 450px; }
-
-%div#explore_modal.modal.hide.fade{ style: "width: 681px; left: 47%;"}
+%div#explore_modal.modal.hide.fade
   - @personas ||= current_company.personas
   = render "personas/explore"
