--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -16,16 +16,16 @@
     .exploreheader{ margin:0px; width:669px;padding:12px 0 0px 12px; background-color:#F9F9F9;}
     .exploreheader h1 {font-size: 21px; margin-bottom: 10px;}
     .exploreheader img {width:40px; height: 40px; border-radius:4px; float:left; margin-right: 8px;}
-    .exploretiles {padding:16px;}
-    .exploretiledetailsarea{border-radius:10px; padding:10px 10px 0 10px;}
+    .exploretiles { padding:30px 16px 30px 16px; }
+    .exploretiles .bar2 .mosaic-overlay { bottom:-28px; height:48px;}
+    .exploretiles .mosaic-block {width:130px; height:130px;}
     .exploretiles .bigexploreimagespace{display:inline-block; vertical-align: top;}
     .exploretiles .bigexploreimagespace img{width:120px; margin-right:10px}
+    .exploretiledetailsarea{border-radius:10px; padding:10px 10px 0 10px;}
     .exploredetailsspace{display:inline-block; width:485px;vertical-align: top;}
     .exploredetailsspace button{float:right; margin-top:10px}
     .exploretextdetails span{font-size:20px; font-weight:bold; font-style:italic;}
     .details button{ padding:3px; float:right; position:relative; right:6px; font-size:10px; font-weight:bold; opacity:1;}
-    .exploretiles .bar2 .mosaic-overlay { bottom:-28px; height:48px;}
-    .exploretiles .mosaic-block {width:130px; height:130px;}
     .explorenewuserfooter{position:relative; bottom:12px; left:16px; margin-bottom:8px;}
     .modal_close img{width:20px; height:20px;}
     
@@ -35,7 +35,10 @@
     %div{ style: "padding-bottom:8px;" }
       = image_tag @persona.picture
       %h1{ style: "font-size: 23px; position:relative; top:8px; line-height:1;" }
-        %strong #{@persona.name}: Choose your Challenge...
+        - if current_user.enrollments.size == 0
+          #{@persona.name}: Choose your first Challenge...
+        - else
+          #{@persona.name}: Choose your Challenge...
     %div
       %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", style: "width:15px; height:15px; margin:4px 4px 0 0;" }
       %p{ style: "font-size: 14px; line-height: 28px; display:inline;" } Challenges represent skillsets where you can prove what you know, and be inspired by others. 
