--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -34,7 +34,7 @@
     %div.span11
       %div.newsfeed
         %div.leftboxheader
-          %div
+          %div{ style: "display:inline;" }
             %span{ style: "border-bottom: 0px; padding-top:1px;" } Stream
             = link_to "Date", path_path(@path, order: "date"), class: "btn leftbtn"
             = link_to "Votes", path_path(@path, order: "votes"), class: "btn midbtn"
@@ -47,6 +47,9 @@
                 - @path.sections.each do |s|
                   - s.creative_tasks.each do |task|
                     %li{ style: "padding: 5px;" }= link_to truncate(task.question, length: 80), path_path(@path, task: task.id), style: "font-size: 14px; text-decoration: none; color: #0064CD"
+          %div{ style: "display:inline; float:right; cursor:pointer; position:relative; top:5px; margin-right:4px;" }
+            %span{ style: "font-weight:normal;"} Sort
+            %img{:src => "https://s3.amazonaws.com/moonlite-nsdub/static/down_arrow.png", :style => "width:10px; position:relative; bottom:2px;"}
         = render "shared/newsfeed", { newsfeed_items: @responses }
 
 %div#launchpad.modal.hide.fade{ style: "left: 36%; top: 30%;"}
